--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,27 @@
 version: "3"
 
 services:
-
   backend:
     container_name: infisical-backend
     restart: unless-stopped
     depends_on:
       - mongo
     image: infisical/backend
-    env_file: .env
     environment:
-      - NODE_ENV=production
+      - ENCRYPTION_KEY
+      - JWT_SIGNUP_SECRET
+      - JWT_REFRESH_SECRET
+      - JWT_AUTH_SECRET
+      - JWT_SERVICE_SECRET
+      - JWT_PROVIDER_AUTH_SECRET
+      - JWT_AUTH_LIFETIME
+      - JWT_REFRESH_LIFETIME
+      - JWT_SIGNUP_LIFETIME
+      - JWT_PROVIDER_AUTH_LIFETIME
+      - MONGO_URL
+      - MONGO_USERNAME
+      - MONGO_PASSWORD
+      - SITE_URL
     networks:
       - infisical
 
@@ -20,35 +31,17 @@ services:
     depends_on:
       - backend
     image: infisical/frontend
-    env_file: .env
-    environment:
-      # - NEXT_PUBLIC_POSTHOG_API_KEY=${POSTHOG_PROJECT_API_KEY}
-      - INFISICAL_TELEMETRY_ENABLED=${TELEMETRY_ENABLED}
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.infisical-frontend.rule=Host(`infisical.kantanao.com`)"
+      - "traefik.http.services.infisical-frontend.loadbalancer.server.port=3000"
     networks:
       - infisical
-
-  # secret-scanning-git-app:
-  #   container_name: infisical-secret-scanning-git-app
-  #   restart: unless-stopped
-  #   depends_on:
-  #     - backend
-  #     - frontend
-  #     - mongo
-  #   ports:
-  #     - "3000:3001"
-  #   image: infisical/staging_deployment_secret-scanning-git-app
-  #   env_file: .env
-  #   networks:
-  #     - infisical
 
   mongo:
     container_name: infisical-mongo
     image: mongo
     restart: always
-    env_file: .env
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USERNAME}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
     volumes:
       - mongo-data:/data/db
     networks:
