--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,6 @@
 version: '3'
 
 services:
-  nginx:
-    container_name: infisical-dev-nginx
-    image: nginx
-    restart: always
-    ports:
-      - 8080:80
-    volumes:
-      - ./nginx/default.dev.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - frontend
-      - backend
-    networks:
-      - infisical-dev
 
   backend:
     container_name: infisical-dev-backend
@@ -34,7 +21,7 @@ services:
     env_file: .env
     environment:
       - NODE_ENV=development
-      - MONGO_URL=mongodb://root:example@mongo:27017/?authSource=admin
+      - MONGO_URL=mongodb://clkf6qmfz000b9gqdf7na7g4a:OxtoZNGW7rM2ghtQjwxExreD@clkf6qmgb0024qd9gvjvq5dmx:27017/
     networks:
       - infisical-dev
     extra_hosts:
@@ -64,8 +51,8 @@ services:
     restart: always
     env_file: .env
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=example
+      - MONGO_INITDB_ROOT_USERNAME=clkf6qmfz000b9gqdf7na7g4a
+      - MONGO_INITDB_ROOT_PASSWORD=OxtoZNGW7rM2ghtQjwxExreD
     volumes:
       - mongo-data:/data/db
     networks:
@@ -79,9 +66,9 @@ services:
       - mongo
     env_file: .env
     environment:
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=example
-      - ME_CONFIG_MONGODB_URL=mongodb://root:example@mongo:27017/
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=clkf6qmfz000b9gqdf7na7g4a
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=OxtoZNGW7rM2ghtQjwxExreD
+      - ME_CONFIG_MONGODB_URL=mongodb://clkf6qmfz000b9gqdf7na7g4a:OxtoZNGW7rM2ghtQjwxExreD@clkf6qmgb0024qd9gvjvq5dmx:27017/
     ports:
       - 8081:8081
     networks:
