--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,20 @@ version: '3'
 
 services:
 
+  nginx:
+    container_name: infisical-dev-nginx
+    image: nginx
+    restart: always
+    ports:
+      - 8080:80
+    volumes:
+      - ./nginx/default.dev.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - frontend
+      - backend
+    networks:
+      - infisical-dev
+
   backend:
     container_name: infisical-dev-backend
     restart: unless-stopped
